@@ -1,7 +1,17 @@
-
 0.5.1
 
- - packaging fix
+ - Packaging fix
+   [hazmat]
+
+ - Issue 38: Support FixedPoint Field
+   [stefan.eletzhofer]
+
+ - Issue 26: bulk.py now sets security context to Superuser so that all content 
+   is mirrored. 
+   [witchert, redinnovation]
+
+ - Issue 46: Avoid incorrect delete of references  
+   [tesdal]
 
 0.5.0 
 
